note.txt
Microsoft Windows [Version 6.1.7601]
Copyright (c) 2009 Microsoft Corporation.  All rights reserved.

C:\Users\u8004042>python
Python 2.7.10 (default, May 23 2015, 09:44:00) [MSC v.1500 64 bit (AMD64)] on wi
n32
Type "help", "copyright", "credits" or "license" for more information.
>>> import json
>>> data = {"key":01}
>>> data
{'key': 1}
>>> type(data)
<type 'dict'>
>>> json.dump(data)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: dump() takes at least 2 arguments (1 given)
>>> json.dumps\(data)
  File "<stdin>", line 1
    json.dumps\(data)
                    ^
SyntaxError: unexpected character after line continuation character
>>> json.dumps(data)
'{"key": 1}'
>>> import pickle
>>> pickle.dumps(data)
"(dp0\nS'key'\np1\nI1\ns."
>>> str_json = json.dumps(data)
>>> str_json
'{"key": 1}'
>>> str_json.tobytes()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'str' object has no attribute 'tobytes'
>>> data.tobytes()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'dict' object has no attribute 'tobytes'
>>> b = bytes(str_json,"unchanged")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: str() takes at most 1 argument (2 given)
>>> bytes
<type 'str'>
>>> __dir(str_json)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name '__dir' is not defined
>>> b = bytearray()
>>> byte_json = b.extend(str_json)
>>> byte_json
>>> b.extend(str_json)
>>> str_json
'{"key": 1}'
>>> b=str_json.encode('ascii')
>>> b
'{"key": 1}'
>>> b = bytearray(str_json)
>>> b
bytearray(b'{"key": 1}')
>>> print b
{"key": 1}
>>> print b[0]
123
>>> print b[1]
34
>>> b.len
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'bytearray' object has no attribute 'len'
>>> len(b)
10
>>> ^Z